--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -35,6 +35,10 @@
 		  "supportedLocales": [""],
 		  "fallbackLocale": ""
 		}
+	  },
+	  "invoice":{
+		"type": "sap.ui.model.json.JSONModel",
+		"uri":"Invoices.json"
 	  }
 	},
 	"rootView": {
